Se crea el formualrio de mant de usuario, se hacen pruebas para que sea responsive..//TODO programar los botones

--- a/HotelRiu/HotelRiu.csproj
+++ b/HotelRiu/HotelRiu.csproj
@@ -73,8 +73,15 @@
     <Compile Include="Globales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validaciones.cs" />
     <EmbeddedResource Include="Formularios\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmPrincipalMDI.resx">
+      <DependentUpon>FrmPrincipalMDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmUsuariosGestion.resx">
+      <DependentUpon>FrmUsuariosGestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -111,6 +118,7 @@
   <ItemGroup>
     <Content Include="Imagenes\riuLogin.ico" />
     <Content Include="Imagenes\riuLogin.jpg" />
+    <Content Include="Imagenes\Usuario\perfil.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
