--- a/HotelRiu/App.config
+++ b/HotelRiu/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="CnnStr" connectionString="Server=DESKTOP-UQV67E8; DataBase=HotelRiu_P5; 
+		<add name="CnnStr" connectionString="Server=STEVEN-LAPTOP; DataBase=HotelRiu_P5; 
 			 INTEGRATED SECURITY=TRUE"/>
 	</connectionStrings>
     <startup> 
