--- a/HotelRiu/App.config
+++ b/HotelRiu/App.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+
 	<connectionStrings>
-		<add name="CnnStr" connectionString="Server=STEVEN-LAPTOP; DataBase=HotelRiu_P5; 
-			 INTEGRATED SECURITY=TRUE"/>
+		<add name="CnnStr" connectionString="Server=localhost; DataBase=HotelRiu_P5;  INTEGRATED SECURITY=FALSE; User Id=hotelriu; Password=hotelriucostarica;"/>
 	</connectionStrings>
-    <startup> 
+
+	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 </configuration>
