--- a/HotelRiu/HotelRiu.csproj
+++ b/HotelRiu/HotelRiu.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Formularios\FrmEmpleadosGestion.Designer.cs">
       <DependentUpon>FrmEmpleadosGestion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\FrmFacturacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmFacturacion.Designer.cs">
+      <DependentUpon>FrmFacturacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmHabitaciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmEmpleadosGestion.resx">
       <DependentUpon>FrmEmpleadosGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmFacturacion.resx">
+      <DependentUpon>FrmFacturacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmHabitaciones.resx">
       <DependentUpon>FrmHabitaciones.cs</DependentUpon>
