--- a/HotelRiu/HotelRiu.csproj
+++ b/HotelRiu/HotelRiu.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Formularios\FrmHabitaciones.Designer.cs">
       <DependentUpon>FrmHabitaciones.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\FrmHospedajeBuscar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmHospedajeBuscar.Designer.cs">
+      <DependentUpon>FrmHospedajeBuscar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmHospedajesGestion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmHabitaciones.resx">
       <DependentUpon>FrmHabitaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmHospedajeBuscar.resx">
+      <DependentUpon>FrmHospedajeBuscar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmHospedajesGestion.resx">
       <DependentUpon>FrmHospedajesGestion.cs</DependentUpon>
