--- a/HotelRiu/HotelRiu.csproj
+++ b/HotelRiu/HotelRiu.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\FrmCambioContrasennia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmCambioContrasennia.Designer.cs">
+      <DependentUpon>FrmCambioContrasennia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmClientesGestion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,12 @@
     <Compile Include="Formularios\FrmPrincipalMDI.Designer.cs">
       <DependentUpon>FrmPrincipalMDI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\FrmRecuperarContrasennia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmRecuperarContrasennia.Designer.cs">
+      <DependentUpon>FrmRecuperarContrasennia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmUsuariosGestion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +134,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validaciones.cs" />
+    <EmbeddedResource Include="Formularios\FrmCambioContrasennia.resx">
+      <DependentUpon>FrmCambioContrasennia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmClientesGestion.resx">
       <DependentUpon>FrmClientesGestion.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmPrincipalMDI.resx">
       <DependentUpon>FrmPrincipalMDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmRecuperarContrasennia.resx">
+      <DependentUpon>FrmRecuperarContrasennia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmUsuariosGestion.resx">
       <DependentUpon>FrmUsuariosGestion.cs</DependentUpon>
